@@ -1,3 +1,9 @@
+2020-08-12 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3097.c:
+	  Fix bug #3097.
+
 2020-08-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* support/regression/tests/p99-conformance.c: Disable a test for
